--- a/lab_6/.gitignore
+++ b/lab_6/.gitignore
@@ -1,3 +1,3 @@
+feb-19
 Assignment 6 Graded Lab Activity6 - week7.docx
-~$signment 6 Graded Lab Activity6 - week7.docx
-
+degu0055-Lab6-CST8912.docx
